# Prose

./: README.md  SPEC.md  input.txt  interpreter.py  lexer.py  parser.py  post_response.json  prose.py  pyproject.toml  test_lexer.py  transpiler.py
benchmarks/: 01_fibonacci_js.js  01_fibonacci_prose.prose  01_fibonacci_prose.py  01_fibonacci_py.py  02_primes_js.js  02_primes_prose.prose  02_primes_prose.py  02_primes_py.py  03_bubblesort_js.js  03_bubblesort_prose.prose  03_bubblesort_prose.py  03_bubblesort_py.py  04_palindrome_js.js  04_palindrome_prose.prose  04_palindrome_prose.py  04_palindrome_py.py  05_wordcount_js.js  05_wordcount_prose.prose  05_wordcount_prose.py  05_wordcount_py.py  06_factorial_js.js  06_factorial_prose.prose  06_factorial_prose.py  06_factorial_py.py  07_fizzbuzz_js.js  07_fizzbuzz_prose.prose  07_fizzbuzz_prose.py  07_fizzbuzz_py.py  08_listsum_js.js  08_listsum_prose.prose  08_listsum_prose.py  08_listsum_py.py  09_stringreverse_js.js  09_stringreverse_prose.prose  09_stringreverse_prose.py  09_stringreverse_py.py  10_power_js.js  10_power_prose.prose  10_power_prose.py  10_power_py.py  (+10 more)
docs/: 01_getting_started.md  02_variables_and_logic.md  03_loops_and_lists.md  04_functions_and_files.md  05_advanced_features.md
samples/: helpers.prose  output.txt  sample1.prose  sample10.prose  sample11.prose  sample12.prose  sample13.prose  sample14.prose  sample15.prose  sample16.prose  sample17.prose  sample18.prose  sample19.prose  sample2.prose  sample20.prose  sample21.prose  sample22.prose  sample23.prose  sample24.prose  sample25.prose  (+17 more)
(+12 files in other folders)
